yaml/debug.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: debug-deployment
  namespace: devops
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: debug
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: debug
    spec:
      containers:
        - command:
            - sleep
            - '360000000'
          image: 'radial/busyboxplus:curl'
          imagePullPolicy: IfNotPresent
          name: debug
          resources: {}
          stdin: true
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          tty: true
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
