yaml/vs.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: hello-peng-v2
  namespace: istio-ingress
spec:
  gateways:
    - istio-ingress/istio-ingress-gateway
  hosts:
    - test-hello-peng-v2.devops.pix.com
  http:
    - match:
        - port: 80
      route:
        - destination:
            host: hello-peng-v2.devops.svc.cluster.local
            port:
              number: 80
